Prevent contents of the page from endless stretching horizontally

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: "Courier New", sans-serif;
     height: 100vh;
     margin: 0;
+    padding: 0;
 }
 
 ul {
@@ -15,10 +16,15 @@ a {
     text-decoration: none;
 }
 
-.header,
-.hero {
+.header-container,
+.hero-container {
     background-color: #1F2937;
     color: white;
+}
+
+.header, .hero, .quote {
+    margin: 0 auto;
+    max-width: 1536px;
 }
 
 .header {
@@ -33,7 +39,7 @@ a {
 }
 
 .header-links a,
-.hero {
+.hero-container {
     font-size: 18px;
     color: #E5E7EB;
 }
@@ -73,9 +79,6 @@ a {
     border-radius: 10px;
 }
 
-/**
-OR CLASS .hero-img?
- */
 .hero > div > img {
     width: 100%;
     height: 100%;
@@ -115,10 +118,13 @@ OR CLASS .hero-img?
     border-radius: 15px;
 }
 
+.quote-container {
+    background-color: #E5E7EB;
+}
+
 .quote {
     display: flex;
     flex-direction: column;
-    background-color: #E5E7EB;
     padding: 10% 25%;
 }
 
